# kids_video_factory

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md
migrations/: schema_01.sql
src/: agent.rs  agents.rs  agents2.rs  api.rs  config.rs  db.rs  dispatcher.rs  entities.rs  enums.rs  errors.rs  helper.rs  macro_rules.rs  main.rs  models.rs  oauth.rs  producer.rs  provider copy.rs  provider.rs  render.rs  renderer.rs  scheduler.rs  uploader copy.rs  uploader.rs  workflow.rs
src/agents/: builder.rs  cleaner.rs  cloudflare.rs  gemini.rs  googleapis.rs  hugging_face.rs  manager.rs  microsoft_edge.rs  mod.rs  planner.rs  publisher.rs  renderer.rs  writer.rs
src/api/: cloudflare.rs  elevenlabs.rs  gemini.rs  googleapis.rs  mod.rs
src/apis/: elevenlabs.rs  fal.rs  gemini.rs  googleapis.rs  hugging_face.rs  microsoft_edge.rs  pollinations.rs
src/entities/: character.rs  mod.rs  movie.rs
src/migrations/: schema.sql
src/models/: auth.rs  job.rs  mod.rs
src/providers/: cf_worker.rs  eleven_labs.rs  gemini.rs  mod.rs
src/uploaders/: mod.rs  tiktok.rs  youtube.rs
