[package]
name = "kids_video_factory"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full", "time"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
rusqlite = "0.30"
serde_json = "1.0"
chrono = "0.4"
dotenvy = "0.15"
futures = "0.3"
base64 = "0.22"
rand = "0.8"
