[package]
name = "kids_video_factory"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full", "time"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.9.0", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "macros"
] }
serde_json = "1.0"
strum = "0.27"
strum_macros = "0.27"
chrono = "0.4"
dotenvy = "0.15"
futures = "0.3"
base64 = "0.22"
rand = "0.8"
thiserror = "2"
async-trait = "0.1"
warp = "0.3"
webbrowser = "1"
urlencoding = "2"